// syntax for this file is proto3
syntax = "proto3";

/*
Person is used to identify
users accross our system.
*/

message Person {
  // age of the person
  int32 age = 1;
  string first_name = 2;
  string last_name = 3;
  /*
  The profile picture is a
  small jpeg file
  */
  bytes thumbnail = 4; // thumbnail of the profile picture
  bool is_activated = 5;

  // height of the person in centimeters
  float height = 6;

  repeated string phone_numbers = 7;

  enum EyeColor {
    UNKNOWN_EYE_COLOUR = 0;
    EYE_GREEN = 1;
    EYE_BROWN = 2;
    EYE_BLUE = 3;
  }

  EyeColor eye_colour = 8;
}